application/assets/thread.css
body {
    margin: 0;
    padding: 0;
    font-family: userselected, Verdana, Arial, sans-serif;
}

td {
    border: 1px solid #c1c1c1;
	border-left:0px;
	border-right:0px;
    overflow: auto;
}

h4 {
    font-weight: bold;
    margin: 0px;
}

table {
    table-layout: fixed;
    border-width: 1px;
    border-collapse: collapse;
    width: 100%;
}

.post-cell {
    vertical-align: top;
}

.content {
    width: 100%;
}

#thread-body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    border: 0;
}

.bbc-block {
    margin: 12px 32px;
    border-bottom: 1px #999999 solid;
}

.bbc-block h4 {
    border-top: 1px #999999 solid;
    padding: 8px 0 2px 0;
    font-style: italic;
}

.bbc-block blockquote {
    margin: 0 0 8px 0;
    padding: 0;
}

.post-content {
    vertical-align: top;
    border-width: 1px;
    border-collapse: collapse;
}

.username {
    vertical-align: top;
    font-style: bold !important;
}

.username h4 {
    font-size: larger;
}

.username img{
	margin-left: 5px;
}

.userinfo, .post-content, .avatar-text {
    vertical-align: top;
}

.post-content {
    margin: 5px 5px 1px;
}

.post-content img{
	max-width: 100% !important;
}

.action-button {
    float: right;
    vertical-align: middle;
    padding-right: 12px;
    padding-left: 25px;
	display:inline-block;
}

.userinfo {
    vertical-align: top;
    padding: 5px;
}

.userinfo-row {
    width:100%;
    overflow: auto;
    border-top-style: solid;
    border-top-width:2px;
    border-bottom-style: solid;
    border-bottom-width:0px;
    border-right-width:0px;
    border-left-width:0px;
}

.avatar {
    vertical-align: top;
    text-align: center;
    margin-top: 15px;
    padding-bottom: 5px;
	height: 100px;
	width: 100px;
}
.avatar-cell {
	vertical-align:top;
	width: 100px;
}


.button-row img {
    margin: 5px;
}

.inline-button {
    vertical-align: top;
    float: right;
    font-size: larger;
	padding-left:20px;
	padding-bottom:10px;
}

.post-buttons {
    width:100%;
    overflow: hidden;
    border-top-width:0px;
    border-bottom-style: solid;
    border-bottom-width:2px;
    border-right-width:0px;
    border-left-width:0px;
}

.usercolumn {
    vertical-align: top;
}

.quote-button {
    text-align: right;
    margin-right: 15px;
    padding: 4px;
}

.bbc-spoiler, .bbc-spoiler li {
    background: black;
}

.editedby {
    font-style: italic;
}

.avatar {
    padding: 0px;
    margin: 0px;
    float: left;
	background-size:contain;
	background-repeat:no-repeat;
	background-position:center; 
}

.phone .userinfo, .phone .avatar-text {
    padding: 3px;
    float: left;
    margin-left: 4px;
}

